--- a/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
@@ -11,6 +11,28 @@ public without sharing class ASF_CaseTriggerModularHelper {
     private static Map<Id, Boolean> supressErrors = new Map<Id, Boolean>();
     public static Boolean isRecursiveUpdate = false;
     public static Boolean preClosureStageAlreadyStamped = false;
+    private static Map<Id, Set<String>> skipperFlagMap = new Map<Id, Set<String>>();
+    public static Map<Id, Set<String>> getSkipperFlagMap() {
+        return skipperFlagMap;
+    }
+    /**
+* @Function - setSkipperFlags
+* @Description - method to be invoked at the beginning and end of the BEFORE triggers
+* This will set the flags set to skip per case, respective methods can just check whether their skipper flag is present in the map or not.
+*/
+    public static void setSkipperFlags(List<Case> newList, Map<Id, Case> oldMap) {
+        skipperFlagMap = new Map<Id, Set<String>>();
+        for(Case caseRec : newList){
+            system.debug('set flag--'+caseRec.Feature_Skipper_Flag__c);
+            if(String.isNotBlank(caseRec.Feature_Skipper_Flag__c) 
+               && (oldMap == null || caseRec.Feature_Skipper_Flag__c != oldMap.get(caseRec.Id).Feature_Skipper_Flag__c)){
+                   //if insert or the flag field is updated
+                   Set<String> skippedItems = new Set<String>(caseRec.Feature_Skipper_Flag__c.split(';'));
+                       skipperFlagMap.put(caseRec.Id, skippedItems);
+                   caseRec.Feature_Skipper_Flag__c = '';
+               }
+        }
+    }
     /****************************************************************************************************************
     * @Function - populateFrameworkFieldsForCase
     * @param newList -  list of cases from trigger.new.
@@ -780,59 +802,7 @@ public without sharing class ASF_CaseTriggerModularHelper {
             triggerEncounteredError = new Map<Id, Boolean>();
         }
     }
-    public static void populateOverrideSLA(List<Case> currentCases, Map<Id, String> caseIdToNextStageMap){
-        Set<String> externalIds = new Set<String>();
-        Set<Id> caseIds = new Set<Id>();
-        for(Case caseRec : currentCases){
-            externalIds.add(caseRec.CCC_External_Id__c);
-            caseIds.add(caseRec.Id);
-        }
-        
-        List<ASF_Case_Stage_Config__c> allStageConfigs = ASF_CaseQueryHandler.getCaseStageConfigWithRlAndIntr(externalIds);
 
-        // Find All Query Fields for Case, Merge them togther, and perform one Query on Case
-        Set<String> allFields = new Set<String>{'stage__c', 'businesshoursid', 'ccc_external_id__c', 'previous_stage__c', 'business_unit__c', 'lead__c'};
-        for(ASF_Case_Stage_Config__c config: allStageConfigs){
-            if(config.Query_Fields__c != null){
-                allFields.addAll(config.Query_Fields__c.toLowerCase().split(','));
-            }
-        }
-        List<Case> queriedCaseRecords = ASF_CaseQueryHandler.getCaseRecordWithQueryFields(allFields, caseIds);
-        
-        // Fetch all Case Rules and Run the Approrpriate One - For Approval matching the Case Stage Config
-        List<ASF_Case_Rule__c> allCaseRules = ASF_CaseQueryHandler.getCaseRuleWithHierarchy(externalIds);
-        Map<String, List<ASF_Case_Rule__c>> externalIdToCaseRulesMap = new Map<String, List<ASF_Case_Rule__c>>();
-        Map<Id, List<ASF_Case_Rule__c>> caseIdToCaseRuleMap = new Map<Id, List<ASF_Case_Rule__c>>();
-        
-        for(ASF_Case_Rule__c rule : allCaseRules){
-            if(!externalIdToCaseRulesMap.containsKey(rule.C3ExternalId__c+rule.Stage_Name__c)){
-                externalIdToCaseRulesMap.put(rule.C3ExternalId__c+rule.Stage_Name__c, new List<ASF_Case_Rule__c>());
-            }
-            externalIdToCaseRulesMap.get(rule.C3ExternalId__c+rule.Stage_Name__c).add(rule);
-        }
-        
-        for(Case caseRec : currentCases){
-            String nextStage = caseIdToNextStageMap.get(caseRec.Id);
-            if(externalIdToCaseRulesMap.containsKey(caseRec.CCC_External_Id__c+nextStage)){
-                if(!caseIdToCaseRuleMap.containsKey(caseRec.Id)){
-                    caseIdToCaseRuleMap.put(caseRec.Id, new List<ASF_Case_Rule__c>());
-                }
-                caseIdToCaseRuleMap.get(caseRec.Id).addAll(externalIdToCaseRulesMap.get(caseRec.CCC_External_Id__c+nextStage));
-            }
-        }
-        //Get override sla values and store it in a map
-        Map<Id, Map<string,long>> slaCaseAndStageOverrideValues = ASF_CaseFrameworkHelper.addSLA(queriedCaseRecords, caseIdToCaseRuleMap);
-       
-        for(Case caseRec : currentCases){
-            if(!addlDataFromStageMovementMethods.containsKey(caseRec.Id)){
-                addlDataFromStageMovementMethods.put(caseRec.Id, new ASF_CaseMovementHelper.CaseAdditionalData());
-            }
-            addlDataFromStageMovementMethods.get(caseRec.Id).slaCaseAndStageOverrideValues = slaCaseAndStageOverrideValues.get(caseRec.Id);
-            system.debug('sla value check--'+ addlDataFromStageMovementMethods.get(caseRec.Id).slaCaseAndStageOverrideValues);
-            system.debug('checklist null check--'+addlDataFromStageMovementMethods.get(caseRec.Id).approvalsToInsert);
-        }
-        
-    }
     //Runs the ASF_CaseMovementHelper.getCaseAdditionalDataForNextStage method
     //to fetch the tasks, checklists, approvals and integrations and
     //stores them in static variable for after context trigger to insert them
@@ -842,7 +812,6 @@ public without sharing class ASF_CaseTriggerModularHelper {
         List<Case> eligibleRecords = new List<Case>();
         List<Case> caseListForSla = new List<Case>();
         Map<Id, String> caseStageMap = new Map<Id, String>();
-        Map<Id, String> caseStageMapForSla = new Map<Id, String>();
         Boolean isUpdate = oldMap!=null?true:false;
         Map<Id, case> newMap = new Map<Id, case>();
         
@@ -860,18 +829,19 @@ public without sharing class ASF_CaseTriggerModularHelper {
             else if(caseRec.Technical_Source__c != null && caseRec.CCC_External_Id__c != null && isUpdate
        				&& (caseRec.stage__c != oldMap.get(caseRec.Id).stage__c && caseRec.pending_clarification__c==true)){
                        caseListForSla.add(caseRec);
-                       caseStageMapForSla.put(caseRec.Id, caseRec.Stage__c);
+                       caseStageMap.put(caseRec.Id, caseRec.Stage__c);
                    }
         }
-        if(!caseStageMapForSla.isEmpty()){
-            populateOverrideSLA(caseListForSla, caseStageMapForSla);
-        }
         if(!caseStageMap.isEmpty()){
-            Map<Id, ASF_CaseMovementHelper.CaseAdditionalData> dataWrapper = ASF_CaseMovementHelper.getCaseAdditionalDataForNextStage(eligibleRecords, caseStageMap);
+            Map<Id, ASF_CaseMovementHelper.CaseAdditionalData> dataWrapper = ASF_CaseMovementHelper.getCaseAdditionalDataForNextStage(eligibleRecords, caseStageMap, caseListForSla);
             //addlDataFromStageMovementMethods = new Map<Id, ASF_CaseMovementHelper.CaseAdditionalData>();
             //addlDataFromStageMovementMethods = dataWrapper;
-
-            List<Case> casesWithPeripheralRecords = ASF_CaseQueryHandler.getCases(caseStageMap.keySet());
+            List<Case> casesWithPeripheralRecords = new List<Case>();
+            
+            if(!eligibleRecords.isEmpty()){
+                casesWithPeripheralRecords = ASF_CaseQueryHandler.getCases(caseStageMap.keySet());
+            }
+  
             Map<String, Boolean> checklistMap = new Map<String, Boolean>();
             Map<String, Boolean> taskMap = new Map<String, Boolean>();
             for(Case caseRec : casesWithPeripheralRecords){
@@ -962,6 +932,12 @@ public without sharing class ASF_CaseTriggerModularHelper {
                         }
                     }
                 }
+            }
+            for(Case caseRec : caseListForSla){
+                if(!addlDataFromStageMovementMethods.containsKey(caseRec.Id)){
+                    addlDataFromStageMovementMethods.put(caseRec.Id, new ASF_CaseMovementHelper.CaseAdditionalData());
+                }
+                addlDataFromStageMovementMethods.get(caseRec.Id).slaCaseAndStageOverrideValues = dataWrapper.get(caseRec.Id).slaCaseAndStageOverrideValues;
             }
         }
     }
