Closed IGMS Complaints batch update

--- a/force-app/main/default/classes/ABSLI_ClosedIGMSComplaintBatch.cls
+++ b/force-app/main/default/classes/ABSLI_ClosedIGMSComplaintBatch.cls
@@ -19,8 +19,10 @@ public with sharing class ABSLI_ClosedIGMSComplaintBatch implements Database.Bat
             'WHERE Nature__c = \'Complaint\' ' +
             'AND IRDAI_Token_Number__c != null ' +
             'AND ClosedDate < LAST_N_DAYS:' + daysForClosedCases + ' ' +
-            'AND IsClosed = true';
-    }
+            'AND IsClosed = true ' +
+            'AND ABSLI_Case_Detail__r.Escalated__c = false';
+	}
+
 
     public Database.QueryLocator start(Database.BatchableContext bc) {
         return Database.getQueryLocator(strQuery);
