ABSLI Business Hours Fix

--- a/force-app/main/default/classes/ABCL_CommonCLass.cls
+++ b/force-app/main/default/classes/ABCL_CommonCLass.cls
@@ -68,6 +68,9 @@ public with sharing class ABCL_CommonCLass {
                 else if(bussHrName.containsIgnoreCase('ABSLIG')) {
                     mapOf_BusinessUnit_To_BusinessHr.put('ABSLIG', bh);
                 }
+                else if(bussHrName.containsIgnoreCase('ABSLI')) {
+                    mapOf_BusinessUnit_To_BusinessHr.put('ABSLI', bh);
+                }
             }
         
             for(Case csRec : newCaseLst) {  
