--- a/force-app/main/default/classes/ASF_GetCaseRelatedDetails.cls
+++ b/force-app/main/default/classes/ASF_GetCaseRelatedDetails.cls
@@ -72,7 +72,7 @@ public without sharing class ASF_GetCaseRelatedDetails {
                                                               ReadOnly__c,IsControllingField__c , Update__c, Mandatory__c, 
                                                               Controlling_field__c, Controlling_Experssion__c, Controlling_Picklist__c,
                                                               Default_Value__c,Default_Type__c, Case_Category_Config__c,
-                                                              Display_Order__c, Sensitive_field__c,Use_Controlling_Formula__c ,
+                                                              Display_Order__c, Sensitive_field__c,Use_Controlling_Formula__c ,Multi_Picklist_Max_Allowed_Values__c,
                                                               Controlling_Formula__c,Searchable_Picklist__c,Confirmation_Required__c, Confirmation_LWC__c
                                                               FROM ASF_Case_Field_Config__c  WHERE Case_Category_Config__c =:cccId ORDER BY Display_Order__c ASC];
         system.debug('orderfieldConfigRecords '+fieldConfigRecords);        
@@ -102,9 +102,15 @@ public without sharing class ASF_GetCaseRelatedDetails {
             
             if(config.Field_Type__c == 'LOV' && config.Searchable_Picklist__c == true){
                 item.bSearchablePicklist = true;
+                item.maxValuesAllowed = 1;
             }
             else if(config.Field_Type__c == 'Multi-Select LOV' && config.Searchable_Picklist__c == true){
                 item.bMultiSelectSearchablePicklist = true;
+                item.maxValuesAllowed = 5;
+                if(config.Multi_Picklist_Max_Allowed_Values__c != 0 && config.Multi_Picklist_Max_Allowed_Values__c != null){
+                 	item.maxValuesAllowed = config.Multi_Picklist_Max_Allowed_Values__c;   
+                }
+                
             }
             else if(config.Field_Type__c == 'Link'){
                 item.bShowAsCustomLink = true;
@@ -167,7 +173,7 @@ public without sharing class ASF_GetCaseRelatedDetails {
     //get Case Category Metadata
     @AuraEnabled(cacheable= true)
     public static List<ASF_Case_Category_Config__c > getCaseCategoryConfig(string cccExtId){
-        return [SELECT id,Type__c, Sub_Type__c, Nature__c, Business_Unit__c, Product__c,Allowed_Sources__c,First_Stage__c,UI_Cards__c, Type_Synonyms__c, Priority__c, Custom_Segment__c, CCC_External_Id__c, Reopen_Style__c  FROM ASF_Case_Category_Config__c  WHERE CCC_External_Id__c =: cccExtId];
+        return [SELECT id,Type__c, Sub_Type__c, Nature__c, Business_Unit__c, Product__c,Type_Synonyms__c,Allowed_Sources__c,First_Stage__c,UI_Cards__c, Priority__c, Custom_Segment__c, CCC_External_Id__c, Reopen_Style__c  FROM ASF_Case_Category_Config__c  WHERE CCC_External_Id__c =: cccExtId];
     }
     
     //get Case Stage Metadata
@@ -302,6 +308,8 @@ public without sharing class ASF_GetCaseRelatedDetails {
         public String confirmationLWCName{get;set;}
         @AuraEnabled
         public string dependentField{get;set;}
+        @AuraEnabled
+        public Decimal maxValuesAllowed{get;set;}
     }
     
     @AuraEnabled(cacheable= true)
