--- a/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
+++ b/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
@@ -58,7 +58,48 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
                    }
             }
         }   
-    } */
+    }*/
+    
+    /**
+     * @description This method is called from ASF_CaseTriggerBUSpecificHandler whenever a case is
+     * moved to next stage. It validates if any open checklist is pending and throws validation error
+     * @param newMap
+     * @param oldMap
+     */
+    public static void validateTasks(List<Case> absliCases, Map<Id, Case> oldMap, Map<Id, Case> newMap){
+        Map<Id, Case> eligibleCases = new Map<Id, Case>();
+        if(!absliCases.isEmpty()){
+            for(Case caseRec : absliCases){
+                if((caseRec.MoveToNext__c != oldMap.get(caseRec.Id).MoveToNext__c && caseRec.MoveToNext__c == true) 
+                   || (caseRec.MoveToNext__c == oldMap.get(caseRec.Id).MoveToNext__c && caseRec.MoveToNext__c == false
+                      && caseRec.CCC_External_Id__c == oldMap.get(caseRec.Id).CCC_External_Id__c
+                      && caseRec.Reopened_DateTime__c == oldMap.get(caseRec.Id).Reopened_DateTime__c
+                      && caseRec.Reject_Case__c == oldMap.get(caseRec.Id).Reject_Case__c
+                      && caseRec.Is_Duplicate__c == oldMap.get(caseRec.Id).Is_Duplicate__c
+                      && caseRec.Stage__c != oldMap.get(caseRec.Id).Stage__c
+                      && caseRec.pending_clarification__c == false)){
+                       
+                       eligibleCases.put(caseRec.Id, caseRec);
+                }
+            }
+            Map<Id,AggregateResult> mCountOfNotCompletedTaskOnCase = new Map<Id,AggregateResult>(
+                [SELECT WhatId Id, COUNT(ID) FROM Task 
+                 WHERE Status NOT IN ('Completed','Rejected')
+                 AND WhatId =: eligibleCases.keySet()
+                 GROUP BY WhatId
+                 HAVING COUNT(ID) > 0]);
+            
+            for(Case caseRec : eligibleCases.values()){
+                Map<Id, Set<String>> skipperFlagMap = ASF_CaseTriggerModularHelper.getSkipperFlagMap();
+                if(mCountOfNotCompletedTaskOnCase.containsKey(caseRec.Id) && 
+                   !(skipperFlagMap.containsKey(caseRec.Id) && skipperFlagMap.get(caseRec.Id).contains(ASF_Constants.SKIP_VALIDATE_TASKS))){
+                    Case caseError = newMap.get(caseRec.Id);
+                    caseError.addError(System.Label.Incomplete_Tasks_Error_Message);
+                    newMap.put(caseRec.Id,caseError);
+                }
+            }
+        }   
+    }
     
     /**
      * @description This method is called from ASF_CaseTriggerBUSpecificHandler whenever a case is
@@ -201,15 +242,15 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
             Map<Id,AggregateResult> mCountOfNotCompletedChecklistOnCase = new Map<Id,AggregateResult>(
                 [SELECT Case__c Id, COUNT(ID) FROM ASF_Checklist__c 
                  WHERE Status__c IN: ABSLI_Constants.CHECKLIST_FAILURE_STATUS
-                 AND Case__c =: eligibleCases.keySet()
-                 AND Mandatory__c = TRUE
+                                                      AND Case__c =: eligibleCases.keySet()
+                                                      AND Mandatory__c = TRUE
                  GROUP BY Case__c
                  HAVING COUNT(ID) > 0]);
             for(Case c : eligibleCases.values()){
                 if(mCountOfNotCompletedChecklistOnCase.containsKey(c.Id)){
-                    c.Reject_Case__c = true;
-                    c.Auto_Rejected__c = true;
-                    c.MoveToNext__c = false;
+                        c.Reject_Case__c = true;
+                        c.Auto_Rejected__c = true;
+                        c.MoveToNext__c = false;
                 }
             }
         }              
@@ -259,7 +300,7 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
                         newMap.put(caseRec.Id,caseError);
                 }
                 if(caseRec.IGMS_Complaint_Type_Code__c != null &&
-                  	caseRec.Nature__c == 'Complaint' &&
+                  	caseRec.Nature__c == 'Complaint' && 
                     caseRec.ABSLI_Case_Detail__r.IRDAI_Token_Number__c != null && 
                     caseRec.Technical_Source__c != 'API'){
                 	ABSLI_IGMSClassificationUtility.validationWrapper returnWrapper= ABSLI_IGMSClassificationUtility.validateCurrentSelection(mClassificationIGMS, caseRec);
